--- a/css/endcard.css
+++ b/css/endcard.css
@@ -41,3 +41,27 @@
     font-size: 3rem;
     margin-top: 5rem;
 }
+
+
+@media only screen and (max-width : 1200px) {
+
+    .end-card { 
+        margin: 1rem;
+        margin-top: 7rem;
+    }
+
+    .end-projects a { 
+        display: block;
+    }
+
+    .end-card-button { 
+        margin: 1rem;
+        margin-top: 5rem;
+    }
+
+    .end-card-button a { 
+        font-size: 1rem !important;
+        margin: 1rem;
+        top: 5rem;
+    }
+}
