--- a/css/letter.css
+++ b/css/letter.css
@@ -91,3 +91,25 @@ a {
     height: 40rem;
     width: 98vw;
 }
+
+@media only screen and (max-width : 1200px) {
+    p { 
+        font-size: 1rem;
+        line-height: 2.0rem;
+        margin: 3rem 3rem;
+    }
+
+    .intro { 
+        font-size: 1.25rem;
+        line-height: 2.25rem;
+        margin: 5rem 3rem;
+    }
+
+    h2 { 
+        font-size: 2rem;
+    }
+
+
+
+
+}
