--- a/css/project.css
+++ b/css/project.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,700;0,800;1,200;1,300;1,700;1,800&display=swap');
-@import 'endcard.css';
-@import 'menu.css';
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
 
 :root { 
     --main-text-color: #FFFFFF;
     --main-bg-color: #0C0C0C;
-    --main-font: 'Montserrat', sans-serif;
+    --slate: #21282A;
+    --main-font: 'Poppins', sans-serif;
     --mental-reminder-accent: #C2D1BE;
     --mental-reminder-dark-accent: #555B53;
     --move-in-accent: #007AC8;
@@ -20,269 +20,97 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--main-bg-color);
-}
-
-h1, h2, h3, h4, h5, p { 
-    color: var(--main-text-color);
-    font-family: var(--main-font);
-}
-
-i { 
-    color: var(--main-text-color);
-    font-size: 1.563rem;
-}
-
-p { 
-    font-size: 1.25rem;
-    line-height: 2rem;
 }
 
 h2 { 
-    font-size: 3.052rem;
-}
-
-h3 { 
-    font-size: 1.953rem;
-}
-
-h1 { 
-    font-size: 3.815rem;
-}
-
-.m3 { 
-    margin: 3rem;
-}
-
-.m10 { 
-    margin: 10rem;
-}
-
-.lm3 { 
-    margin-left: 3rem;
-}
-.content-wrapper { 
-    max-width: 95rem;
-    margin:auto;
-}
-
-.section-padding { 
-    margin: 10rem;
-}
-
-.mental-reminder-accent { 
-    color: var(--mental-reminder-accent);
-}
-
-.move-in-accent { 
-    color: var(--move-in-accent);
-}
-
-.wta-accent { 
-    color: var(--wta-accent);
-}
-
-li { 
-    font-size: 1.25rem;
-    color: white;
+    font-weight: 600;
     font-family: var(--main-font);
-    line-height: 2rem;
+    font-size: 3rem;
+    line-height: 5rem;
+    margin: 0;
+    color: white;
 }
 
 h5 { 
-    font-size: 1.563rem;
-}
-
-.back-button { 
-    display: flex;
-    margin: 3rem 9rem;
-}
-
-.back-button h5 { 
-    margin:0;
-    padding-left: 1.25rem;
-    color: white;
-}
-
-.back-button a { 
-    text-decoration: none;
-    margin: 0;
-}
-
-/* --------------------------------------------------------------- PROJECT INFO */
-.project-info { 
-    display: flex;
-    justify-content: space-between;
-    padding-left: 10rem;
-    padding-right: 13rem;
-}
-
-.title h1 { 
-    font-weight: 300;
-    font-size: 5.96em;
-    margin: 0;
-}
-
-.title { 
-    padding-left: 10rem;
-}
-
-/* --------------------------------------------------------------- PROJECT BRIEF */
-
-.brief, .m10 { 
-    margin: 10rem;
-}
-
-.brief h2 { 
-    font-weight: 700; 
-    font-size: 3.052rem;
-}
-
-.brief p { 
-    padding: 0 5rem;
-}
-
-.brief-text { 
-    padding: 0 5rem;
-}
-
-.brief-border-mental-reminder { 
-    border-left: 1rem solid var(--mental-reminder-dark-accent);
-}
-
-.brief-border-move-in { 
-    border-left: 1rem solid var(--move-in-dark-accent);
-}
-
-.brief-border-wta { 
-    border-left: 1rem solid var(--wta-dark-accent);
-}
-
-/* --------------------------------------------------------------- PROJECT BRIEF */
-
-.core-challenges { 
-    margin: 10rem;
-}
-
-.challenge { 
-    margin: 3rem;
-}
-
-
-/* --------------------------------------------------------------- PROCESS */
-.process { 
-    margin: 10rem;
-}
-.process-wrapper { 
-    display: flex;
-    justify-content: space-between;
-    font-size: 2.441rem;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 200px;
-}
-
-/* --------------------------------------------------------------- RESEARCH */
-
-.two-col { 
-    display: flex;
-    justify-content: space-around;
-}
-
-.research { 
-    margin: 10rem;
-}
-
-.source { 
-    font-size: .75em;
-    text-decoration: none;
-    color: white;
-    font-weight: 800;
-}
-
-
-.persona { 
-    margin-top: 3rem;
-
-}
-
-.end-card-button a { 
-    text-decoration: none;
-    font-size: 2rem;
-    color: #0C0C0C;
-    padding: 1rem;
-    background-color: white;
-    margin: 3rem;
+    font-weight: 500;
     font-family: var(--main-font);
-    font-weight: 700;
+    font-size: 1.8rem;
+    margin: 0;
+    line-height: 3.15rem;
 
 }
 
-.center { 
-    text-align: center;
+p { 
+    font-size: 1rem;
+    font-family: var(--main-font);
+    font-weight: 400;
+    line-height: 1.75rem;
+}
 
+/* ------------------------------------
+
+ MOLECULE - TYPOGRAPHY 
+
+ DOUBLE COLUMN
+
+* ------------------------------------------ */
+
+.double-column { 
+    display: flex;
+    max-width: 90rem;
+    margin: auto;
+}
+
+.double-column-line { 
+    height: .4rem;
+    width: 60%;
+    background-color: black;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+
+.col { 
+    margin: 3rem;
+    width: 35rem;
 }
 
 
-/* --- One breakpoint is all we need for both tablets and phones since this is basically all text --- */
-@media only screen and (max-width : 1200px) {
+/* ------------------------------------
 
-    p { 
-        font-size: 1rem;
-        line-height: 2.0rem;
+ MOLECULE - DISPLAY
 
-    }
+ ONE PICTURE DISPLAY
 
+* ------------------------------------------ */
 
-    .content-wrapper { 
-        max-width: 100%;
-    }
+.one-picture-display { 
+    background-color: var(--slate);
+}
 
-    .project-info, .back-button, .title { 
-        margin-left: 3rem;
-    }
+.one-picture-display p { 
+    color: white;
+    margin-right: 30%;
+    font-weight: 300;
+    margin-top: 2rem;
+}
 
-    .title { 
-        padding-left: 0;
-    }
+.one-picture-inner { 
+    display: flex;
+    max-width: 94rem;
+    margin: auto;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
 
-    .title h1 { 
-        font-size: 3rem;
-    }
+.double-column-line-white { 
+    height: .4rem;
+    width: 50%;
+    background-color: white;
+    margin-top: .5rem;
+    margin-bottom: 1rem;
+}
 
-    .project-info { 
-        padding: 0;
-        display: block;
-    }
-
-    .brief, .core-challenges, .process, .research, .ideation { 
-        margin: 0;
-        margin-left: 3rem;
-        margin-top: 7rem;
-    }
-
-    .brief-text { 
-        padding: 0 2rem;
-    }
-
-    .brief p { 
-        padding: 0 2rem;
-    }
-
-    .process-wrapper { 
-        display: block;
-    }
-
-    .two-col { 
-        display: block;
-    }
-
-    .m10 { 
-        margin: 3rem;
-    }
-
-    .m3 { 
-        margin: 1rem;
-    }
-
+.one-picture-column { 
+    margin: 3rem;
+    width: 44rem;
 }
