--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:100&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,700;0,800;1,200;1,300;1,700;1,800&display=swap');
-@import 'preloader.css';
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+@import 'responsive.css';
 
 :root { 
     --main-text-color: black;
@@ -10,8 +9,7 @@
     --blinds-color:#EFEDED;
     --about-color: #16425B;
     --about-secondary: #D9DCD6;
-    --main-font: 'Montserrat', sans-serif;
-    --secondary-font: 'Roboto Mono', monospace;
+    --main-font: 'Poppins', sans-serif;
 }
 
 html, body {
@@ -37,52 +35,576 @@ h2 {
 
 
 ::selection { 
-        background: gray;
+        background: black;
+        color: white;
 }
 
 ::-moz-selection { 
     background: black;
+    color: white;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
 
-/*--------------------------------------------------------------------------------------------------------------------- NAVIGATION --*/
-h3 { 
-    cursor: pointer;
-}
 
+/* --- FORMATTING AND WHITESPACE --- */
 
-.content { 
+.content-wrapper { 
     position: relative;
-    display: inline-block;
+    max-width: 90rem;
+    margin: auto;
 }
 
-.table { 
-    display: none;
-    position: absolute;
-    z-index: 1;
-    width: 550px;
+
+/* --- NAVIGATION --- */
+
+
+h3 { 
+    font-weight: 500;
+    font-size: 1.5rem;
 }
 
-.table a { 
-    color: black;
-    display: block;
+.nav { 
+    position: fixed;
+    top: 0;
+    padding-left: 9rem;
+    background-color: var(--main-bg-color);
+    width: 100vw;
+    z-index: 3;
+}
+
+.nav a { 
     text-decoration: none;
+    color: black;
 }
 
-.content:hover .table { 
-    display: block;
+.progress-bar { 
+    display: flex;
+    position: absolute;
+    top: 47%;
+    left: 17rem;
 }
 
-.content:hover .h3 { 
-    background-color: blue;
+.progress-bar svg { 
+    height: 1rem;
+    width: 1rem;
+    margin-top: -.4rem;
 }
 
+.line { 
+    height: .2rem;
+    width: 8rem;
+    background-color: black;
+}
+/* Used for the landing header only */
+h2 { 
+    font-size: 2.40rem;
+    font-weight: 500;
+    line-height: 3.0rem;
+}
+
+p { 
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+/* --- Landing --- */
+
+.landing { 
+    position: relative;
+    min-height: 100vh;
+}
+
+.landing-content { 
+    margin-top: 20%;
+}
+
+ .caption { 
+    font-size: 0.8rem;
+    font-weight: 300;
+    max-width: 20rem;
+}
+
+.caption a { 
+    color: black;
+}
+
+.landing-content { 
+    max-width: 45rem;
+    position: absolute; 
+    bottom: 5rem;
+    left: 9rem;
+}
+
+.landing-image { 
+    position: absolute;
+    right: 9rem;
+    bottom: 3rem;
+}
+
+.landing p { 
+    padding-right: 3rem;
+}
+
+.image-wrapper { 
+    background-color: gray;
+    width: 25vw;
+    height: 70vh;
+}
+
+.landing-line { 
+    border-bottom: .3rem solid #D6D6D6;
+    width: 50%;
+    margin-bottom: 1rem;
+}
+
+.landing-links a { 
+    text-decoration: none;
+    font-weight: 500;
+    padding-right: 1rem;
+    font-family: var(--main-font);
+    color: black;
+
+}
+
+/* --- SELECT WORKS --- */
+
+.select-works { 
+    margin-top: 5rem;
+    height: 9rem;
+}
+
+.select-works h1 {
+    float: right;
+    font-size: 5.8rem;
+    font-weight: 500;
+    margin: 0;
+    padding-right: 2rem;
+ }
+
+ .select-works::after { 
+     content: "01";
+     position: absolute;
+     right: 0rem;
+     font-weight: 600;
+     font-family: var(--main-font);
+     top: 0rem;
+     font-size: 2rem;
+
+ }
+
+ /* --- PROJECT CARDS --- */
+
+ .img { 
+     height: 23vw;
+     background-color: gray;
+ }
+
+ .project-row { 
+     display: flex;
+     margin: 5vw 9vw;
+ }
+
+ .project { 
+     width: 33vw;
+     margin: 0vw 4vw;
+     box-shadow: 0.75vw 0.75vw 1vw darkgray;
+ }
+
+ .project-grid { 
+     margin-bottom: 5rem;
+ }
+
+ .project-afterwards { 
+     width: 33vw;
+     margin: 0vw 6vw;
+     position: relative;
+ }
+
+ .afterwards-text { 
+     position: absolute;
+     bottom: 1vw;
+ }
+
+ .afterwards-text p { 
+     font-size: .85vw;
+ }
+
+ .afterwards-text h3{ 
+     font-size: 3.75vw;
+     position: relative;
+     margin: 0;
+     margin-bottom: 3vw;
+ }
+
+ .afterwards-text h3::after { 
+     content: "";
+     width: 13vw;
+     height: .5vw;
+     background-color: black;
+     position: absolute;
+     bottom: -.75vw;
+     left: 0;
+ }
+
+ .afterwards-text a { 
+     text-decoration: underline;
+     color: black;
+     font-weight: 500;
+     font-size: 1.3vw;
+ }
+
+ .project:hover .mental-reminder { 
+     background-size: 39vw;
+     background-position: -3vw -5vw;
+     background-color: #667763;
+ }
+
+ .project:hover h4::after { 
+     width:10vw;
+     transition: all 0.7s ease-out;
+     -webkit-transition: all 0.7s ease-out;
+ }
+
+ .project-text-wrapper { 
+     height: 10vw;
+     position: relative;
+ }
+
+ .project-text { 
+     width: 30vw;
+     position: absolute;
+     top: 50%;
+     transform: translateY(-43%);
+     left: 2vw;
+ }
+
+
+ .project-text h4 { 
+     font-size: 2vw;
+     margin: 0;
+ }
+
+ .project-text h4::after { 
+     content: "";
+     width: 5vw;
+     height: .28vw;
+     background-color: black;
+     position: absolute;
+     left: 0;
+     bottom: 4.4vw;
+     transition: all 0.7s ease-out;
+     -webkit-transition: all 0.7s ease-out;
+ }
+
+ .project-text p { 
+     font-size: .85vw;
+     width: 80%;
+     padding: 0;
+     margin-top: 1.5vw;
+ }
+
+
+
+
+ /* --- IDK PROJECT STUFF --- */
+
+ .img { 
+     transition: all 0.7s ease-out;
+     -webkit-transition: all 0.7s ease-out;
+ }
+
+ .mental-reminder { 
+     background-image: url("../assets/mental-reminder-thumbnail.png");
+     background-repeat: no-repeat;
+     background-size: 35vw;
+     background-position: -1vw -3vw;
+     background-color: #596257;
+ }
+
+
+ footer { 
+     background-color: #21282A;
+     display: flex;
+     padding: 3rem;
+ }
+
+ footer div { 
+     padding: 0rem 5rem;
+ }
+
+ footer h2 { 
+     color: gray;
+     font-size: 9rem;
+     font-weight: 300;
+     position: relative;
+     margin: 0;
+     margin-top: 3rem;
+     padding-bottom: 5rem;
+     border-bottom: .25rem solid gray;
+ }
+
+ .ref-wrapper h2::after { 
+     position: absolute;
+     bottom: 0;
+     left: 0;
+     width: 30%;
+     height: .5rem;
+     background-color: white;
+
+ }
+
+ footer h5 { 
+     margin: 0;
+     color: gray;
+     font-size: 1.2rem;
+     font-weight: 600;
+ }
+
+ footer a { 
+     text-decoration: none;
+     color: white;
+
+ }
+
+ .footer-underline-link { 
+     text-decoration: underline;
+ }
+
+ footer p { 
+     color: white;
+     padding: 0;
+     font-size: .85rem;
+
+ }
+
+ 
+
+@media only screen and (max-width: 1618px) { 
+    .select-works h1 { 
+        padding-right: 5rem;
+    }
+
+    .select-works::after { 
+        right: 3rem;
+    }
+}
+
+
+@media only screen and (max-width: 1370px) { 
+    /* --- Landing fix --- */
+    .landing-content { 
+        left: 3rem;
+    }
+
+    .landing-image { 
+        right: 3rem;
+    }
+
+    /* --- project stuff --- */
+    .project-row { 
+        margin: 5vw 6vw;
+    }
+
+    .project { 
+        width: 40vw;
+        margin: 0vw 2vw;
+    }
+
+    .img { 
+        height: 28vw;
+    }
+
+    .project-text-wrapper { 
+        height: 12vw;
+    }
+
+    .project-text h4::after { 
+        bottom: 5vw;
+    }
+
+    .project p { 
+        font-size: 1vw;
+        width: 95%;
+    }
+
+    /* --- footer fix --- */
+    footer div { 
+        padding: 0rem 3rem;
+    }
+}
+
+/* --- BEEG YOSHI --- */
+@media only screen and (max-width: 1200px) { 
+    html { 
+        font-size: 13px;
+    }
+    
+    /* Give 3 rem breathing room ebtween select works and right margin */
+    .select-works h1 { 
+        /* 3 rem padding + 2rem width */
+        padding-right: 5rem;
+    }
+
+    .select-works::after { 
+        right:3rem;
+    }
+
+
+}
+
+/* --- Laptops --- */
+@media only screen and (max-width: 992px) { 
+    footer h2 { 
+        font-size: 6rem;
+        margin-top: 1rem;
+        padding-bottom: 3rem;
+    }
+
+}
+
+/* --- Tablets --- */
+@media only screen and (max-width: 950px) { 
+    .landing-content, .landing-image { 
+        position: relative;
+        left: auto;
+        right: auto;
+        bottom: auto;
+        margin: 3rem 5rem;
+        max-width: 50rem;
+    }
+
+    .landing { 
+        margin-top: 10rem;
+    }
+
+
+    .landing-image { 
+        width: 80%;
+    }
+
+    .image-wrapper { 
+        width: 80%;
+    }
+    
+}
+
+/* --- iPads are ruining my life --- */
+@media only screen and (max-width: 768px) { 
+    footer { 
+        display: block;
+    }
+
+    footer h2 { 
+        font-size: 7rem;
+    }
+
+    footer div { 
+        padding: 2rem 3rem;
+    }
+
+    footer p { 
+        font-size: 1rem;
+    }
+
+    /*---project stuff ---*/
+
+    .project-row { 
+        display: block;
+        margin: 0;
+    }
+
+    .project { 
+        width: 80vw;
+        margin: 10vw;
+    }
+
+    .img { 
+        height: 56vw;
+    }
+
+    .project-text-wrapper { 
+        height: 24vw;
+    }
+
+    .project-text { 
+        width: 70vw;
+        left: 5vw;
+    }
+
+    .project-text h4 { 
+        font-size: 6vw;
+    }
+    
+    .project-text p { 
+        font-size: 2.25vw;
+    }
+
+    .project-text h4::after { 
+        display: none;
+    }
+
+    .project-afterwards { 
+        height: 60vw;
+        width: 70vw;
+        margin: 10vw;
+        padding: 5vw;
+    }
+
+    .project-afterwards h3 { 
+        font-size: 6vw;
+    }
+
+    .project-afterwards p { 
+        font-size: 2.25vw;
+        padding-right: 17vw;
+    }
+
+    .project-afterwards a { 
+        font-size: 2.25vw;
+    }
+
+
+}
 
 /*--- SMARTPHONES (iphone 5s at 320px according to google console) samsung fold or whatever is like...500 ish? a lil more than 500 ---*/
 @media only screen and (max-width : 500px) {
-    
+
+    .landing-content, .landing-image { 
+        margin: 3rem;
+    }
+
+    .landing-image { 
+        width: 100%;
+    }
+
+    .image-wrapper { 
+        width: 80%;
+    }
+
+    .select-works h1 { 
+        line-height: 5.7rem;
+        
+    }
+
+    .select-works::after { 
+        right: auto;
+        left: 21rem;
+        top:-1rem;
+    }
+
+    .nav { 
+        padding-left: 3rem;
+    }
+
+    .progress-bar { 
+        display: none;
+    }
+
+    .nav svg { 
+        display: none;
+    }
 }
 
