--- a/css/project.css
+++ b/css/project.css
@@ -2,8 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
 
 :root { 
-    --main-text-color: #FFFFFF;
-    --main-bg-color: #0C0C0C;
+    --main-text-color: black;
+    --very-light-gray: #DDDDDD;
+    --background-gray: #E6EBEC;
+    --main-bg-color: #FCFCFC;
     --slate: #21282A;
     --main-font: 'Poppins', sans-serif;
     --mental-reminder-accent: #C2D1BE;
@@ -22,13 +24,24 @@ html, body {
     height: 100%;
 }
 
+hr { 
+    width:100%;
+}
+
+img { 
+    display: block;
+    margin: 3em auto;
+}
+
 h2 { 
-    font-weight: 600;
-    font-family: var(--main-font);
-    font-size: 3rem;
-    line-height: 5rem;
-    margin: 0;
-    color: white;
+    font-size: 3em;
+    font-weight: 500;
+    color: black;
+}
+
+h3 { 
+    font-size: 2.25em;
+    font-weight: 400;
 }
 
 h5 { 
@@ -41,76 +54,250 @@ h5 {
 }
 
 p { 
-    font-size: 1rem;
+    font-size: 1.125em;
+    line-height: 2em;
     font-family: var(--main-font);
     font-weight: 400;
-    line-height: 1.75rem;
 }
 
+.body-wrapper { 
+    max-width: 80em;
+    margin: auto;
+    padding: 5em;
+}
+
+
+
+/* ------------------------------------
+COLOR CLASSES
+* ------------------------------------------ */
+
+.airbnb-highlight {
+    color: #E61E4D;
+}
 /* ------------------------------------
 
- MOLECULE - TYPOGRAPHY 
+ MOLECULE - TYPOGRAPHY
 
- DOUBLE COLUMN
+ Small Title
 
 * ------------------------------------------ */
 
-.double-column { 
-    display: flex;
-    max-width: 90rem;
-    margin: auto;
+.small-title { 
+    font-size: 1em;
+    font-weight: 600;
+    line-height: 1.5em;
 }
 
-.double-column-line { 
-    height: .4rem;
-    width: 60%;
-    background-color: black;
-    margin-top: 2rem;
-    margin-bottom: 3rem;
+/* ------------------------------------
+HEADER INFO 
+* ------------------------------------------ */
+
+.header-pre { 
+    max-width: 45em;
+    padding: 3em 0;
+}
+
+.header-pre h1 { 
+    font-size: 4em;
+    margin: 0;
+    font-weight: 500;
+}
+
+.header-pre p { 
+    font-size: 1.5em;
+    font-weight: 400;
+}
+
+.horizontal-divider { 
+    border-bottom: 1px solid var(--very-light-gray);
+}
+
+
+/* ------------------------------------
+
+ MOLECULE - LAYOUT
+
+ 3-Column Header
+
+* ------------------------------------------ */
+
+.col-3-header { 
+    display: flex;
+    justify-content: space-between;
+    max-width: 60em;
+    padding: 3em 0;
+}
+
+.col-3-header-wrapper p { 
+    line-height: .75em;
+}
+
+
+
+/* ------------------------------------
+
+ MOLECULE - LAYOUT
+
+ TEXT BLOCK
+
+* ------------------------------------------ */
+
+.text-block { 
+    margin: 3em 0;
+}
+
+.text-block-header {
+    max-width: 65em;
+}
+
+.col-2 { 
+    display: flex;
+    justify-content: space-between;
 }
 
 .col { 
-    margin: 3rem;
-    width: 35rem;
+    width: 37em;
+}
+
+.col-3 { 
+    display: flex;
+    justify-content: space-between;
+}
+
+.col-3 > div { 
+    max-width: 20em;
+}
+
+.three-column-block { 
+    margin: 3em 0;
+}
+
+.three-column-block > h3 { 
+    margin: 2.5em 0em;
+}
+
+.bg-gray { 
+    background-color: var(--background-gray);
 }
 
 
 /* ------------------------------------
 
- MOLECULE - DISPLAY
-
- ONE PICTURE DISPLAY
+WHITE SPACE 
 
 * ------------------------------------------ */
 
-.one-picture-display { 
-    background-color: var(--slate);
+.ws-top-bottom-3 { 
+    margin: 3em 0;
 }
 
-.one-picture-display p { 
-    color: white;
-    margin-right: 30%;
-    font-weight: 300;
-    margin-top: 2rem;
+.ws-top-3 { 
+    margin-top: 3em;
 }
 
-.one-picture-inner { 
-    display: flex;
-    max-width: 94rem;
-    margin: auto;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+.ws-pad-top-5 { 
+    padding-top:5em;
 }
 
-.double-column-line-white { 
-    height: .4rem;
-    width: 50%;
-    background-color: white;
-    margin-top: .5rem;
-    margin-bottom: 1rem;
+.ws-pad-top-7 { 
+    padding-top: 7em;
 }
 
-.one-picture-column { 
-    margin: 3rem;
-    width: 44rem;
+.ws-top-5 { 
+    margin-top: 5em;
+}
+
+.ws-bottom-3 { 
+    margin-bottom: 3em;
+}
+
+.ws-bottom-5 { 
+    margin-bottom: 5em;
+}
+
+@media only screen and (max-width: 1200px) { 
+
+    img { 
+        display: block;
+        margin: 3em auto;
+    }
+
+    h2 { 
+        font-size: 2.6em;
+    }
+
+    h3 { 
+        font-size: 2em;
+    }
+
+    h5 { 
+        font-size: 1.8rem;
+        line-height: 2.8rem;
+
+    }
+
+    p { 
+        font-size: 1em;
+        line-height: 1.9em;
+        font-family: var(--main-font);
+        font-weight: 400;
+    }
+
+    .body-wrapper { 
+        max-width: 70em;
+        margin: auto;
+        padding: 5em;
+    }
+
+    /* ------------------------------------
+     MOLECULE - LAYOUT
+     TEXT BLOCK
+    * ------------------------------------------ */
+
+    .text-block { 
+        margin: 3em 0;
+    }
+
+    .text-block-header {
+        max-width: 65em;
+    }
+
+    .col-2 { 
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .col-2:nth-child(0) { 
+        margin-right:2em;
+    }
+
+    .col-2:nth-child(1) { 
+        margin-left: 2em;
+    }
+
+    .col { 
+        width: 30em;
+    }
+
+    .col-3 { 
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .col-3 > div { 
+        max-width: 20em;
+    }
+
+    .three-column-block { 
+        margin: 3em 0;
+    }
+
+    .three-column-block > h3 { 
+        margin: 2.5em 0em;
+    }
+
+    .bg-gray { 
+        background-color: var(--background-gray);
+    }
 }
